add_executable(
    core_tests
)
target_sources(
    core_tests
    PRIVATE
        caching.cpp
        concept_denotation.cpp
        role_denotation.cpp
        core.cpp
        b_empty.cpp
        b_inclusion.cpp
        b_nullary.cpp
        c_all.cpp
        c_some.cpp
        c_and.cpp
        c_or.cpp
        c_diff.cpp
        c_equal.cpp
        c_not.cpp
        c_primitive.cpp
        c_projection.cpp
        c_bot.cpp
        c_top.cpp
        multi_instance.cpp
        c_one_of.cpp
        c_subset.cpp
        r_and.cpp
        r_or.cpp
        r_diff.cpp
        r_inverse.cpp
        r_identity.cpp
        r_restrict.cpp
        r_til_c.cpp
        r_not.cpp
        r_primitive.cpp
        r_top.cpp
        r_transitive_closure.cpp
        r_transitive_reflexive_closure.cpp
        r_compose.cpp
        n_concept_distance.cpp
        n_sum_concept_distance.cpp
        n_role_distance.cpp
        n_sum_role_distance.cpp
        n_count.cpp
        ../utils/denotation.cpp
)
target_link_libraries(core_tests
    PRIVATE
        dlplan::core
        GTest::GTest
        GTest::Main)

add_test(core_gtests core_tests)
